--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "laravel/framework": "5.0.*",
     "sboo/multiauth": "4.0.*",
     "illuminate/html": "^5.0",
-    "doctrine/dbal": "~2.3"
+    "doctrine/dbal": "~2.3",
+    "intervention/image": "^2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
