--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "sboo/multiauth": "4.0.*",
     "illuminate/html": "^5.0",
     "doctrine/dbal": "~2.3",
-    "intervention/image": "^2.3"
+    "intervention/image": "^2.3",
+    "gloudemans/shoppingcart": "~1.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
