--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "illuminate/html": "^5.0",
     "doctrine/dbal": "~2.3",
     "intervention/image": "^2.3",
-    "gloudemans/shoppingcart": "~1.3"
+    "gloudemans/shoppingcart": "~1.3",
+    "laravel/socialite": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
