--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "doctrine/dbal": "~2.3",
     "intervention/image": "^2.3",
     "gloudemans/shoppingcart": "~1.3",
-    "laravel/socialite": "^2.0"
+    "laravel/socialite": "^2.0",
+    "guzzlehttp/guzzle": "~5.3|~6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
